@@ -1,24 +1,25 @@
 package ru.itmo.hungergames.service.impl;
 
-import org.hamcrest.CoreMatchers;
 import org.junit.jupiter.api.Test;
 import org.junit.runner.RunWith;
-import org.mockito.ArgumentMatchers;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.test.context.junit4.SpringRunner;
+
+import ru.itmo.hungergames.model.entity.user.Settings;
 import ru.itmo.hungergames.model.entity.user.Sponsor;
 import ru.itmo.hungergames.model.entity.user.UserRole;
+import ru.itmo.hungergames.repository.SettingsRepository;
 import ru.itmo.hungergames.repository.SponsorRepository;
 import ru.itmo.hungergames.service.SecurityService;
-import ru.itmo.hungergames.util.SecurityUtil;
 
-import java.util.Collections;
+import java.util.Set;
 
-import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 @RunWith(SpringRunner.class)
 @SpringBootTest
@@ -26,20 +27,31 @@ public class SecurityServiceImplTest {
     @MockBean
     private BCryptPasswordEncoder encoder;
     @MockBean
-    private SecurityUtil securityUtil;
-    @MockBean
     private SponsorRepository sponsorRepository;
+    @MockBean
+    private SettingsRepository settingsRepository;
+
     @Autowired
     private SecurityService securityService;
 
-
     @Test
     void createSponsor() {
-        Sponsor sponsor = new Sponsor("sponsor-username", "some-password", "sponsor-name", null);
-        securityService.createSponsor(sponsor);
+        final var sponsorRequest = new Sponsor("sponsor-username", "some-password", "sponsor-name", null);
+        
+        final var encodedPassword = "encoded-password";
 
-        assertTrue(CoreMatchers.is(sponsor.getUserRoles()).matches(Collections.singleton(UserRole.SPONSOR)));
-        Mockito.verify(encoder, Mockito.times(1)).encode(ArgumentMatchers.anyString());
-        Mockito.verify(sponsorRepository, Mockito.times(1)).save(sponsor);
-        Mockito.verify(securityUtil, Mockito.times(1)).validateBeforeSigningUp(sponsor);}
+        doReturn(encodedPassword).when(this.encoder).encode(sponsorRequest.getPassword());
+        
+        securityService.createSponsor(sponsorRequest);
+
+        final var expectedSponsor = Sponsor.builder()
+            .username(sponsorRequest.getUsername())
+            .password(encodedPassword)
+            .name(sponsorRequest.getName())
+            .userRoles(Set.of(UserRole.SPONSOR))
+            .settings(new Settings())
+            .build();
+
+        verify(this.sponsorRepository, times(1)).save(expectedSponsor);
+    }
 }
